objects/ASI_HK_CRM_WebService_Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>ASI_HK_CRM_After_call_web_service__c</fullName>
        <label>After call web service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Before_call_webservice__c</fullName>
        <label>Before call webservice</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebServiceDebugLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_WebServiceName__c</fullName>
        <description>The name which the webService has called</description>
        <label>WebServiceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_WebService_Error_Message__c</fullName>
        <label>WebService Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>WebServiceDebugLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_WebServiceName__c</columns>
        <columns>ASI_HK_CRM_After_call_web_service__c</columns>
        <columns>ASI_HK_CRM_Before_call_webservice__c</columns>
        <columns>ASI_HK_CRM_Submitter__c</columns>
        <columns>ASI_HK_CRM_Success__c</columns>
        <columns>ASI_HK_CRM_WebService_Error_Message__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_FOC_on_SOA</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_WebServiceName__c</columns>
        <columns>ASI_HK_CRM_Before_call_webservice__c</columns>
        <columns>ASI_HK_CRM_After_call_web_service__c</columns>
        <columns>ASI_HK_CRM_Submitter__c</columns>
        <columns>ASI_HK_CRM_WebService_Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>CN FOC Interface</value>
        </filters>
        <label>CN FOC on SOA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>one_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_WebServiceName__c</columns>
        <columns>ASI_HK_CRM_After_call_web_service__c</columns>
        <columns>ASI_HK_CRM_Before_call_webservice__c</columns>
        <columns>ASI_HK_CRM_Submitter__c</columns>
        <columns>ASI_HK_CRM_Success__c</columns>
        <columns>ASI_HK_CRM_WebService_Error_Message__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SO-13010192</value>
        </filters>
        <label>one SO</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>WebService Debug Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebServiceDebugLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>